Add pages and update styles

--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
-        <ul class="nav">
-          <li class="name">Melissa</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Experience</a></li>
-        </ul>
-    </div>
+    <nav class="main-nav">
+      <ul class="nav">
+        <li class="name">Melissa</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="mermaids.html">Mermaids</a></li>
+        <li><a href="pirate_ships.html">Pirate Ships</a></li>
+        <li><a href="crafty.html">Crafts</a></li>
+      </ul>
+    </nav>
 
     <header>
-      <img src="images/beach2015.jpg" alt="Picture of Melissa" class="profile-image">
+      <img src="images/melb-square.jpg" alt="Picture of Melissa" class="profile-image">
       <h1 class="tag name">Hello, I’m Melissa.</h1>
       <p class="tag location">My home is St. Petersburg, Florida.</p>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
-        <p>I'm a Junior Software Engineer doing backend development with Rails. I want to learn front end development to balance out my skill set.</p>
-        <p>I like sewing and other crafts, reading, and spending time at the beach.</p>
-      </div> 
+        <p>I'm a Junior Software Engineer doing backend development with Rails. I want to learn frontend development to balance out my skill set.</p>
+        <p>I like sewing and other crafts, reading, and spending time at the beach. I'm fond of mermaids and pirate ships.</p>
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to learn about building a website on the client side and gain and improve my skills in:</p>
         <ul class="skills">
@@ -38,15 +40,20 @@
           <li>JavaScript</li>
           <li>Vue</li>
         </ul>
-        <p>I love my job and work with an awesome team! I want to be able to contribute more on the front end side.</p>
-      </div> 
+        <p>I love my job and work with an awesome team! I want to be able to contribute more on the frontend side.</p>
+      </section>
+
+      <section class="card">
+        <h2>Interests</h2>
+        <p>I like sewing and other crafts, reading, and spending time at the beach. I'm fond of mermaids and pirate ships.</p>
+      </section> 
 
     </main>
     <footer>
       <ul>
         <li><a href="https://github.com/saltymermaid" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2021, Melissa</p>
+      <p class="copyright">&#169; 2021, Melissa</p>
     </footer>
   </body>
   </html>
