Fix linter complaints

--- a/crafty.html
+++ b/crafty.html
@@ -26,53 +26,53 @@
     </header>
 
     <main>
-      <row class="flex">
+      <div class="flex">
         <section class="card">
           <h2>Noodlehead Poolside Tote in mermaid fabric</h2>
-          <img src="images/crafty/craft_1.jpg" alt="Picture of Craft" class="pic">
+          <img src="images/crafty/craft_1.jpg" alt="Picture of Craft" class="craftpic">
         </section> 
 
         <section class="card">
           <h2>Custom Dog Bed/cushion</h2>
-          <img src="images/crafty/craft_2.jpg" alt="Picture of Craft" class="pic">
+          <img src="images/crafty/craft_2.jpg" alt="Picture of Craft" class="craftpic">
         </section>
-      </row>
+      </div>
 
-      <row class="flex">
+      <div class="flex">
         <section class="card">
           <h2>Recovered Outdoor Cushions</h2>
-          <img src="images/crafty/craft_3.jpg" alt="Picture of Craft" class="pic">
+          <img src="images/crafty/craft_3.jpg" alt="Picture of Craft" class="craftpic">
         </section> 
 
         <section class="card">
           <h2>Toiletry Bag</h2>
-          <img src="images/crafty/craft_4.jpg" alt="Picture of Craft" class="pic">
+          <img src="images/crafty/craft_4.jpg" alt="Picture of Craft" class="craftpic">
         </section> 
-      </row>
+      </div>
 
-      <row class="flex">
+      <div class="flex">
         <section class="card">
           <h2>Noodlehead Super Tote</h2>
-          <img src="images/crafty/craft_5.jpg" alt="Picture of Craft" class="pic">
+          <img src="images/crafty/craft_5.jpg" alt="Picture of Craft" class="craftpic">
         </section> 
 
         <section class="card">
           <h2>Betz White Backgammon Bag</h2>
-          <img src="images/crafty/craft_6.jpg" alt="Picture of Craft" class="pic">
+          <img src="images/crafty/craft_6.jpg" alt="Picture of Craft" class="craftpic">
         </section>
-      </row>
+      </div>
 
-      <row class="flex">
+      <div class="flex">
         <section class="card">
           <h2>Betz White Weekender Duffel</h2>
-          <img src="images/crafty/craft_7.jpg" alt="Picture of Craft" class="pic">
+          <img src="images/crafty/craft_7.jpg" alt="Picture of Craft" class="craftpic">
         </section> 
 
         <section class="card">
           <h2>Noodlehead Poolside Tote with mermaids inside</h2>
-          <img src="images/crafty/craft_8.jpg" alt="Picture of Craft" class="pic">
+          <img src="images/crafty/craft_8.jpg" alt="Picture of Craft" class="craftpic">
         </section> 
-      </row>
+      </div>
     </main>
 
     <footer>
