--- a/mermaids.html
+++ b/mermaids.html
@@ -28,25 +28,29 @@
     <main class="flex">
       <section class="card">
         <h2>Kaia the Mermaid</h2>
-        <img src="images/kaia.jpg" alt="Picture of Mermaid" class="pic">
-        <figcaption>Photo by <a href="/photographer/rubenam-33168" target="_blank">ruben abascal</a> from <a href="https://freeimages.com/">FreeImages</a></figcaption>
+        <figure>
+          <img src="images/kaia.jpg" alt="Picture of Mermaid" class="pic">
+          <figcaption>Photo by <a href="/photographer/rubenam-33168" target="_blank">ruben abascal</a> from <a href="https://freeimages.com/">FreeImages</a></figcaption>
+        </figure>
         <p>Angelfish blue tang, filefish a weird algae, hammerhead grouper kelp. Scorpionfish mermaid cat shark, applesnail in blue whale flounder, parrotfish at 
-            crab. Banana wrasse gold damsel stingray black clown goby an puffer fish applesnail octopus clownfish, bannerfish milk shark soldierfish. Manta ray 
-            with lionfish ect. Bonnethead at puffer fish pipefish octopus threadfin. Quagga mussel grey whale mermaid appeared. Seahorse rock lobster, papershell 
-            shark or scorpionfish is.</p>
+           crab. Banana wrasse gold damsel stingray black clown goby an puffer fish applesnail octopus clownfish, bannerfish milk shark soldierfish. Manta ray 
+           with lionfish ect. Bonnethead at puffer fish pipefish octopus threadfin. Quagga mussel grey whale mermaid appeared. Seahorse rock lobster, papershell 
+           shark or scorpionfish is.</p>
         <p><em>Text courtesy of <a href="https://random-ize.com/lorem-ipsum-generators/ocean-creatures/" target="_blank">Ocean Creature Ipsum</a></em></p>
-      </section> 
+        </section> 
 
       <section class="card">
         <h2>Marinna the Mermaid</h2>
-        <img src="images/marinna.jpg" alt="Picture of Mermaid" class="pic">
-        <figcaption>Photo by <a href="https://commons.wikimedia.org/wiki/File:Julie_Miss_Mermaid_France.jpg" target="_blank">Julietheadventurer</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons</figcaption>
+        <figure>
+          <img src="images/marinna.jpg" alt="Picture of Mermaid" class="pic">
+          <figcaption>Photo by <a href="https://commons.wikimedia.org/wiki/File:Julie_Miss_Mermaid_France.jpg" target="_blank">Julietheadventurer</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons</figcaption>
+        </figure>
         <p>Snake eel goatfish and Black clown goby fanatic jumping at a nurse shark. Coral hogfish at Bursa trigger spot hogfish bite yellow pseudochromis weasel 
-          shark seabass in angelfish. Mystery snail lionfish papershell houndshark. In Beautiful, ocean is Asian clam elktoe, cardinalfish deep heelsplitter 
-          foxface, with crazy Manta ray catshark shaking filefish. Frogfish spot hogfish rabbitfish spotted sweetlips swim, peppered moray creature jumped. 
-          Banana wrasse in yellow pseudochromis non mermaid parrotfish myster.</p>
+           shark seabass in angelfish. Mystery snail lionfish papershell houndshark. In Beautiful, ocean is Asian clam elktoe, cardinalfish deep heelsplitter 
+           foxface, with crazy Manta ray catshark shaking filefish. Frogfish spot hogfish rabbitfish spotted sweetlips swim, peppered moray creature jumped. 
+           Banana wrasse in yellow pseudochromis non mermaid parrotfish myster.</p>
         <p><em>Text courtesy of <a href="https://random-ize.com/lorem-ipsum-generators/ocean-creatures/" target="_blank">Ocean Creature Ipsum</a></em></p>
-      </section> 
+      </section>
     </main>
 
     <footer>
