--- a/pirate_ships.html
+++ b/pirate_ships.html
@@ -28,8 +28,10 @@
     <main class="flex">
       <section class="card">
         <h2>The Silent Blossom</h2>
-        <img src="images/gary-romin.jpg" alt="Picture of Pirate Ship" class="pic">
-        <figcaption>Photo by <a href="/photographer/garyr-39623">Gary Romin</a> from <a href="https://freeimages.com/" target="_blank">FreeImages</a></figcaption>
+        <figure>
+          <img src="images/gary-romin.jpg" alt="Picture of Pirate Ship" class="pic">
+          <figcaption>Photo by <a href="/photographer/garyr-39623">Gary Romin</a> from <a href="https://freeimages.com/" target="_blank">FreeImages</a></figcaption>
+        </figure>
         <p>Grog blossom doubloon Sea Legs cable square-rigged parley lugger measured fer yer chains. Lanyard lass landlubber or just lubber crack 
            Jennys tea cup dance the hempen jig lateen sail ye American Main. Gold Road shrouds walk the plank scurvy no prey, no pay gangway 
            carouser Arr. Grapple pillage galleon capstan landlubber or just lubber keel tackle crimp.</p>
@@ -38,8 +40,10 @@
 
       <section class="card">
         <h2>The Woeful Tide</h2>
-        <img src="images/schooner.jpg" alt="Picture of Pirate Ship" class="pic">
-        <figcaption>Photo by <a href="/photographer/foigt-50139">Rafael Oliveira</a> from <a href="https://freeimages.com/"target="_blank">FreeImages</a></figcaption>
+        <figure>
+          <img src="images/schooner.jpg" alt="Picture of Pirate Ship" class="pic">
+          <figcaption>Photo by <a href="/photographer/foigt-50139">Rafael Oliveira</a> from <a href="https://freeimages.com/" target="_blank">FreeImages</a></figcaption>
+        </figure>
         <p>Spirits execution dock wherry weigh anchor take a caulk scourge of the seven seas avast pinnace. Hulk come about bounty clipper Cat o'nine tails spanker 
            tack cackle fruit. Aye red ensign careen boatswain no prey, no pay driver booty lookout. Main sheet pressgang line six pounders chase lad avast Plate 
            Fleet.</p>
